add user reducer

--- a/src/components/Header/components/ContactInfo/components/UserBox/UserBox.scss
+++ b/src/components/Header/components/ContactInfo/components/UserBox/UserBox.scss
@@ -1,4 +1,12 @@
 .userBox {
   background-color: #3b3b3b;
   display: flex;
+
+  .buttonBlock {
+    position: relative;
+
+    .favoritesImg {
+      filter: invert(100%);
+    }
+  }
 }
