--- a/src/components/Shop/components/Banner/Banner.scss
+++ b/src/components/Shop/components/Banner/Banner.scss
@@ -53,7 +53,7 @@
         object-fit: cover;
       }
 
-      .buttonBlock {
+      .bannerBtnWrap {
         position: absolute;
         bottom: 0;
         right: 0;
