--- a/src/main.scss
+++ b/src/main.scss
@@ -12,8 +12,14 @@ body {
   font-weight: 400;
 
   #root {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     text-align: center;
+
+    main {
+      flex: 1;
+    }
   }
 }
