--- a/src/components/Favorites/Favorites.scss
+++ b/src/components/Favorites/Favorites.scss
@@ -1,4 +1,31 @@
 .favoritesWrap {
   margin: 0 auto;
   width: 90%;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+
+  .quantityProducts {
+    width: 100%;
+    font-weight: 600;
+  }
+
+  .backButtonWrap {
+    width: 100%;
+
+    .backButton {
+      width: auto;
+      height: 30px;
+      background-color: transparent;
+      color: black;
+      font-size: 18px;
+      align-self: flex-start;
+
+      svg {
+        margin-right: 5px;
+      }
+    }
+  }
 }
