--- a/src/common/Button/Button.scss
+++ b/src/common/Button/Button.scss
@@ -13,14 +13,29 @@ button {
     background-color: #f05a00;
     transition: 0.3s;
   }
+
+  span {
+    background-color: #f05a00;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-span {
-  background-color: #f05a00;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  right: 0;
+@media screen and (max-width: 768px) {
+  button {
+    width: 50px;
+    height: 50px;
+
+    span {
+      width: 18px;
+      height: 18px;
+    }
+  }
 }
