--- a/src/common/Input/Input.scss
+++ b/src/common/Input/Input.scss
@@ -1,3 +1,9 @@
-.inputBody {
-  padding: 10px;
+.inputBlock {
+  width: 100%;
+
+  .inputBody {
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+  }
 }
