--- a/src/components/Header/components/Navigation/Navigation.scss
+++ b/src/components/Header/components/Navigation/Navigation.scss
@@ -17,6 +17,7 @@
       justify-content: space-evenly;
       align-items: center;
       border: 1px solid #f05a00;
+      margin-right: 15px;
     }
 
     .navBar {
@@ -27,7 +28,7 @@
         padding: 0;
 
         li {
-          margin-right: 25px;
+          margin-right: 1.5vw;
 
           a {
             text-decoration: none;
@@ -44,15 +45,43 @@
     .searchBar {
       display: flex;
       align-items: baseline;
+      width: 30%;
 
       .searchButton {
         width: 70px;
         height: 40px;
       }
+    }
+  }
+}
 
-      .inputBody {
-        width: 300px;
-        height: 40px;
+@media screen and (max-width: 1024px) {
+  .navWrapper {
+    .controlPanel {
+      flex-wrap: wrap;
+      justify-content: center;
+
+      .navBar {
+        order: 3;
+        display: none;
+      }
+
+      .searchBar {
+        flex: 1;
+        min-width: 30%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navWrapper {
+    .controlPanel {
+      .catalogButton {
+        width: 50px;
+      }
+      .searchBar {
+        min-width: 50%;
       }
     }
   }
