--- a/src/components/Shop/components/Banner/Banner.scss
+++ b/src/components/Shop/components/Banner/Banner.scss
@@ -44,7 +44,7 @@
         color: #fff;
         font-weight: 600;
         letter-spacing: 2px;
-        -webkit-text-stroke: 1px black;
+        text-shadow: 0px 0px 5px black;
       }
 
       .banner {
