--- a/src/components/Shop/components/CardProduct/CardProduct.scss
+++ b/src/components/Shop/components/CardProduct/CardProduct.scss
@@ -41,25 +41,38 @@
     flex-direction: column;
     justify-content: space-between;
 
+    .availableProduct {
+      color: green;
+    }
+
+    .unavailableProduct {
+      color: grey;
+    }
+
     .cardProductPrice {
-      position: relative;
       margin-top: 5px;
       font-weight: 700;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-      .buyButton {
-        width: 224px;
-        height: 28px;
-        position: absolute;
-        left: 50%;
-        bottom: 0;
-        transform: translate(-50%, 0);
-        opacity: 0;
-        transition: opacity 0.3s ease;
+      .activeBuyButton,
+      .disabledBuyButton {
+        width: 36px;
+        height: 30px;
+        background-color: transparent;
+
+        svg {
+          width: 50px;
+          height: 50px;
+          stroke: #008000;
+        }
+      }
+
+      .disabledBuyButton {
+        opacity: 0.3;
+        pointer-events: none;
       }
     }
-  }
-
-  &:hover .cardProductPrice .buyButton {
-    opacity: 1;
   }
 }
