--- a/src/components/Basket/components/BasketItem.scss
+++ b/src/components/Basket/components/BasketItem.scss
@@ -59,6 +59,10 @@
       }
     }
 
+    .price {
+      font-weight: 700;
+    }
+
     .deleteBtn {
       background-color: transparent;
       width: 40px;
@@ -78,6 +82,10 @@
 
     .basketItemInfo {
       gap: 15px;
+
+      p {
+        font-size: 13px;
+      }
     }
   }
 }
