--- a/src/common/Button/Button.scss
+++ b/src/common/Button/Button.scss
@@ -8,6 +8,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 3px;
 
   &:hover {
     background-color: #f05a00;
