--- a/src/common/CardProduct/CardProduct.scss
+++ b/src/common/CardProduct/CardProduct.scss
@@ -9,6 +9,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-end;
+  border-radius: 5px;
 
   a {
     text-decoration: none;
@@ -20,6 +21,36 @@
   img {
     max-width: 100%;
     max-height: 180px;
+  }
+
+  .badges {
+    position: absolute;
+    top: 2%;
+    left: 5%;
+    display: inline-block;
+    flex-direction: column;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 1px;
+
+    .badgeNew {
+      display: block;
+      width: fit-content;
+      background-color: rgb(1, 94, 188);
+      padding: 0 5px;
+      border-radius: 5px;
+      margin-bottom: 3px;
+    }
+
+    .badgeDiscount {
+      display: block;
+      width: fit-content;
+      background-color: #ff6200;
+      padding: 0 5px;
+      border-radius: 5px;
+      margin-bottom: 3px;
+    }
   }
 
   .favoritesBtnWrap {
@@ -46,7 +77,7 @@
     }
 
     .unavailableProduct {
-      color: grey;
+      color: #a2a2a2;
     }
 
     .cardProductPrice {
@@ -54,7 +85,13 @@
       font-weight: 700;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-end;
+
+      .discountedPrice {
+        text-decoration: line-through;
+        color: #a2a2a2;
+        font-weight: 400;
+      }
 
       .activeBuyButton,
       .disabledBuyButton {
