--- a/src/components/Basket/Basket.scss
+++ b/src/components/Basket/Basket.scss
@@ -51,12 +51,30 @@
       margin-top: 15px;
 
       p {
+        width: 100%;
         font-weight: 500;
+        color: #000;
+        border-bottom: 1px solid #a2a2a2;
+        padding-bottom: 5px;
+        margin-bottom: 5px;
+        justify-content: space-between;
+        display: flex;
+
+        &:nth-child(2) {
+          color: #a2a2a2;
+        }
+
+        &:last-of-type {
+          border-bottom: none;
+        }
+
+        span {
+          font-size: 18px;
+          margin-left: 15px;
+        }
 
         .totalAmount {
           color: #f05a00;
-          font-size: 18px;
-          margin-left: 15px;
         }
       }
 
