--- a/src/components/Basket/components/BasketItem.scss
+++ b/src/components/Basket/components/BasketItem.scss
@@ -60,7 +60,11 @@
     }
 
     .price {
-      font-weight: 700;
+      font-weight: 600;
+      .oldPrice {
+        text-decoration: line-through;
+        color: #a2a2a2;
+      }
     }
 
     .deleteBtn {
