--- a/src/components/Home/components/Banner/Banner.scss
+++ b/src/components/Home/components/Banner/Banner.scss
@@ -13,19 +13,27 @@
     grid-template-rows: repeat(2, minmax(100px, 230px));
     grid-gap: 15px;
     grid-template-areas:
-      'tools tools stock novelty'
-      'tools tools stock popular';
+      'tools tools discountedProducts novelty'
+      'tools tools discountedProducts popular';
 
     .bannerBlock {
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
       position: relative;
 
+      &:hover .bannerBtnWrap button {
+        background-color: #f05a00;
+        svg {
+          stroke: #3b3b3b;
+        }
+        transition: 0.3s;
+      }
+
       &.tools {
         grid-area: tools;
       }
 
-      &.stock {
-        grid-area: stock;
+      &.discountedProducts {
+        grid-area: discountedProducts;
       }
 
       &.novelty {
@@ -47,10 +55,11 @@
         text-shadow: 0px 0px 5px black;
       }
 
-      .banner {
+      .bannerImg {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 10px;
       }
 
       .bannerBtnWrap {
