--- a/src/common/CardProduct/CardProduct.scss
+++ b/src/common/CardProduct/CardProduct.scss
@@ -1,21 +1,25 @@
 .cardProduct {
   position: relative;
-  width: 250px;
+  width: 20%;
   height: 400px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
-  margin: 10px;
   padding: 15px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-end;
-  border-radius: 5px;
+  flex-wrap: nowrap;
+  box-shadow: none;
+  flex-direction: column;
+  justify-content: flex-end;
+  border: 1px solid #eaedf7;
+  border-radius: 0;
 
   a {
     text-decoration: none;
     color: black;
     font-size: 12px;
     font-weight: 300;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   img {
@@ -71,6 +75,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 14px;
 
     .availableProduct {
       color: green;
@@ -109,6 +114,34 @@
       .disabledBuyButton {
         opacity: 0.3;
         pointer-events: none;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .cardProduct {
+    width: 33.3%;
+    height: 345px;
+    margin: 0;
+    padding: 7px;
+    box-shadow: none;
+    border: 1px solid #eaedf7;
+    border-radius: 0;
+
+    a {
+      font-size: 9px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .products {
+    .cardProduct {
+      width: 50%;
+
+      .cardProductInfo {
+        font-size: 12px;
       }
     }
   }
