--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -6,7 +6,7 @@
   .paginationBtnBlock {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin: 30px 0;
 
     .paginationButtons {
       background-color: transparent;
