--- a/src/components/Header/components/ControlBlock/ControlBlock.scss
+++ b/src/components/Header/components/ControlBlock/ControlBlock.scss
@@ -71,9 +71,9 @@
         .searchButton {
           position: absolute;
           background-color: transparent;
-          right: 0;
-          top: 2px;
-          width: 30px;
+          right: 1%;
+          top: 3%;
+          width: 34px;
           height: 37px;
         }
       }
