--- a/src/components/Header/components/ControlBlock/components/MobileMenu/MobileMenu.scss
+++ b/src/components/Header/components/ControlBlock/components/MobileMenu/MobileMenu.scss
@@ -1,4 +1,29 @@
+@mixin mobileMenuBtn {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 16px;
+  letter-spacing: 1px;
+  width: 100%;
+  height: 60px;
+  padding: 5px 15px;
+  background-color: transparent;
+  color: #000;
+  border-bottom: 1px solid #eaedf7;
+}
+
+@mixin svgWrapper($color) {
+  color: #ffffff;
+  margin-right: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: $color;
+}
+
 .mobileMenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   color: black;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
   background-color: #ffffff;
@@ -20,46 +45,127 @@
     transform: translateX(0%);
   }
 
-  .mobileMenuHeader {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #eaedf7;
-    padding: 10px 15px;
+  .mobileMenuNavigation {
+    width: 100%;
+    .mobileMenuHeader {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid #eaedf7;
+      padding: 10px 15px;
+      height: 60px;
+      background-color: #eaedf7;
 
-    h3 {
-      font-weight: 500;
+      .mobMenuLogo {
+        display: flex;
+        align-items: center;
+        h3 {
+          font-weight: 500;
+        }
+      }
+
+      .mobileMenuCloseBtn {
+        width: 30px;
+        height: 30px;
+        background-color: transparent;
+        svg {
+          width: 20px;
+          fill: #008ec8;
+        }
+      }
     }
 
-    .mobileMenuCloseBtn {
-      width: 30px;
-      height: 30px;
-      background-color: transparent;
-      svg {
-        width: 20px;
-        fill: #008ec8;
+    .mobileMenuCatalogBtn {
+      @include mobileMenuBtn();
+
+      .svgWrapper {
+        @include svgWrapper(#008ec8);
+      }
+    }
+
+    .mobileUserBox {
+      padding: 5px 15px;
+      height: 60px;
+      display: flex;
+      justify-content: flex-end;
+      border-bottom: 1px solid #eaedf7;
+
+      .mobileBtnFavorite,
+      .mobileBtnUser {
+        display: flex;
+        flex-direction: column;
+        font-size: 11px;
+        color: #000;
+        position: relative;
+        width: 50px;
+        height: 50px;
+        background-color: #ffffff;
+        margin-left: 10px;
+
+        .svgWrapper {
+          svg {
+            width: 32px;
+            height: 32px;
+            stroke: #000;
+            fill: #000;
+          }
+        }
+
+        .value {
+          width: 18px;
+          height: 18px;
+          position: absolute;
+          top: 0%;
+          right: 0;
+          color: #ffffff;
+        }
+      }
+    }
+
+    .mobileBtnStock {
+      @include mobileMenuBtn();
+
+      .svgWrapper {
+        @include svgWrapper(#eaedf7);
+
+        svg {
+          width: 28px;
+          height: 28px;
+          fill: #000;
+        }
+      }
+    }
+
+    .mobileNavBar {
+      width: 100%;
+      padding: 25px 15px 15px 15px;
+
+      ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        li {
+          align-content: center;
+          text-align: left;
+          width: 100%;
+          height: 60px;
+          border-bottom: 1px solid #eaedf7;
+
+          a {
+            text-decoration: none;
+            color: #000;
+          }
+        }
       }
     }
   }
 
-  .mobileMenuCatalogBtn {
-    font-size: 16px;
-    letter-spacing: 1px;
-    border-radius: 0;
+  .schedule {
+    align-content: center;
     width: 100%;
     height: 60px;
-    padding: 15px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: transparent;
-    color: #000;
-
-    .svgWrapper {
-      color: #ffffff;
-      margin-right: 10px;
-      padding: 5px;
-      border-radius: 5px;
-      background-color: #008ec8;
-    }
+    background-color: #eaedf7;
   }
 }
