--- a/src/components/Header/components/ControlBlock/components/MobileMenu/MobileMenu.scss
+++ b/src/components/Header/components/ControlBlock/components/MobileMenu/MobileMenu.scss
@@ -120,6 +120,14 @@
           color: #ffffff;
         }
       }
+
+      .mobileBtnFavorite {
+        .svgWrapper {
+          svg {
+            width: 30px;
+          }
+        }
+      }
     }
 
     .mobileBtnStock {
@@ -129,8 +137,8 @@
         @include svgWrapper(#eaedf7);
 
         svg {
-          width: 28px;
-          height: 28px;
+          width: 26px;
+          height: 26px;
           fill: #000;
         }
       }
@@ -154,6 +162,8 @@
           border-bottom: 1px solid #eaedf7;
 
           a {
+            display: inline-block;
+            width: 100%;
             text-decoration: none;
             color: #000;
           }
