--- a/src/common/SortList/SortList.scss
+++ b/src/common/SortList/SortList.scss
@@ -1,6 +1,7 @@
 .sortListWrapper {
+  width: 100%;
   .sortListBlock {
-    width: 90%;
+    // width: 90%;
     display: flex;
     justify-content: flex-end;
     margin: 0 auto;
