--- a/src/common/ProductList/ProductList.scss
+++ b/src/common/ProductList/ProductList.scss
@@ -2,13 +2,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  width: 90%;
-  margin: 0 auto;
+  // width: 90%;
+  // margin: 0 auto;
+  // flex: 1;
 }
 
 @media screen and (max-width: 1024px) {
   .products {
     justify-content: flex-start;
-    width: 93%;
+    // width: 93%;
   }
 }
