--- a/src/common/CardProduct/CardProduct.scss
+++ b/src/common/CardProduct/CardProduct.scss
@@ -41,7 +41,7 @@
     .badgeNew {
       display: block;
       width: fit-content;
-      background-color: rgb(1, 94, 188);
+      background-color: #015ebc;
       padding: 0 5px;
       border-radius: 5px;
       margin-bottom: 3px;
