--- a/src/common/FilterProducts/FilterProducts.scss
+++ b/src/common/FilterProducts/FilterProducts.scss
@@ -8,7 +8,81 @@
     border: 1px solid #eaedf7;
     border-left: none;
     margin-top: 65px;
-    padding: 0 5px;
+    padding: 15px 5px 40px 5px;
     width: 300px;
+
+    .paramBox {
+      text-align: left;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .filterProductsWrapper {
+    .filters {
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 90%;
+      height: 100%;
+      margin-top: 0;
+      overflow-y: auto;
+      z-index: 101;
+      background-color: #fff;
+      transition: transform 0.3s ease;
+      overflow-y: auto;
+      padding: 0;
+      border-radius: 5px;
+
+      &.hide {
+        transform: translateX(-100%);
+      }
+
+      &.show {
+        animation: none;
+        transform: translateX(0%);
+      }
+
+      .filterTitle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        border-bottom: 1px solid #eaedf7;
+        background-color: #eaedf7;
+        padding: 15px;
+
+        .closeFilterBtn {
+          width: 30px;
+          position: absolute;
+          right: 3%;
+          background-color: transparent;
+
+          svg {
+            width: 20px;
+            height: 20px;
+            fill: #008ec8;
+          }
+        }
+      }
+
+      .paramBox {
+        padding: 10px 15px;
+
+        text-align: left;
+        margin-bottom: 20px;
+        border-bottom: 1px solid #eaedf7;
+      }
+
+      .showFilteredProductsBtn {
+        margin: 50px auto 30px auto;
+        width: 250px;
+        background-color: #008ec8;
+        font-size: 16px;
+      }
+    }
   }
 }
