--- a/src/common/SortList/SortList.scss
+++ b/src/common/SortList/SortList.scss
@@ -1,9 +1,9 @@
 .sortListWrapper {
   width: 100%;
   .sortListBlock {
-    // width: 90%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     margin: 0 auto;
 
     .sortListOptions {
@@ -18,7 +18,21 @@
 @media screen and (max-width: 1024px) {
   .sortListWrapper {
     .sortListBlock {
+      justify-content: space-between;
+
+      .filterBtn {
+        width: 170px;
+        height: 35px;
+        border-radius: 5px;
+        background-color: #008ec8;
+        span {
+          margin-right: 5px;
+        }
+      }
       .sortListOptions {
+        width: 170px;
+        height: 35px;
+        margin-top: 0;
         padding: 6px 2px;
       }
     }
