--- a/src/components/Catalog/Catalog.scss
+++ b/src/components/Catalog/Catalog.scss
@@ -1,6 +1,11 @@
 .catalogWrapper {
   padding-top: 20px;
   width: 100%;
+
+  h2 {
+    margin: 15px 0;
+  }
+
   .breadcrumbs {
     width: 90%;
     margin: 0 auto;
