fix filter styles

--- a/src/common/Breadcrumbs/Breadcrumbs.scss
+++ b/src/common/Breadcrumbs/Breadcrumbs.scss
@@ -1,8 +1,10 @@
 .breadcrumbs {
   display: flex;
+  align-items: center;
   width: 100%;
   text-align: left;
   margin: 15px 0;
+  font-size: 12px;
 
   a {
     color: #959595;
