--- a/src/common/FilterProducts/FilterProducts.scss
+++ b/src/common/FilterProducts/FilterProducts.scss
@@ -53,7 +53,7 @@
         position: relative;
         border-bottom: 1px solid #eaedf7;
         background-color: #eaedf7;
-        padding: 15px;
+        padding: 10px 15px;
 
         .closeFilterBtn {
           width: 30px;
@@ -80,6 +80,7 @@
       .showFilteredProductsBtn {
         margin: 50px auto 30px auto;
         width: 250px;
+        height: 40px;
         background-color: #008ec8;
         font-size: 16px;
       }
