--- a/src/common/SortList/SortList.scss
+++ b/src/common/SortList/SortList.scss
@@ -21,7 +21,7 @@
       justify-content: space-between;
 
       .filterBtn {
-        width: 170px;
+        width: 160px;
         height: 35px;
         border-radius: 5px;
         background-color: #008ec8;
@@ -30,9 +30,10 @@
         }
       }
       .sortListOptions {
-        width: 170px;
+        width: 160px;
         height: 35px;
         margin-top: 0;
+        margin-left: 5px;
         padding: 6px 2px;
       }
     }
