--- a/src/common/CardInfo/CardInfo.scss
+++ b/src/common/CardInfo/CardInfo.scss
@@ -6,10 +6,11 @@
   width: 90%;
 
   .sliderContainer {
-    margin: 30px 30px 30px 0;
+    margin: 30px 15px 30px 0;
     max-width: 400px;
     height: 480px;
     border: 1px solid #cbcbcb;
+    align-self: flex-start;
 
     .arrowNext,
     .arrowPrev {
@@ -35,7 +36,7 @@
       display: flex !important;
       justify-content: center;
       align-items: center;
-      // border: 1px solid #000;
+      padding: 15px;
 
       img {
         // border: 1px solid #000;
@@ -69,7 +70,94 @@
   }
 
   .cardInfo {
+    margin: 30px 0 30px 15px;
     flex: 1;
+    text-align: left;
+    align-self: start;
+
+    .cardInfoHeader {
+      border: 1px solid #cbcbcb;
+      padding: 15px;
+
+      .quantityBlock {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+
+        .cardInfoPrice {
+          width: 100%;
+          font-size: 30px;
+          font-weight: 500;
+          margin: 20px 0;
+        }
+
+        .availableProduct {
+          color: green;
+        }
+
+        .unavailableProduct {
+          color: #a2a2a2;
+        }
+
+        .activeBtnIncreaseQuantity,
+        .disabledBtnIncreaseQuantity {
+          background-color: transparent;
+          width: 50px;
+          height: 30px;
+        }
+
+        .activeBtnIncreaseQuantity {
+          svg {
+            fill: rgb(45, 45, 45);
+            stroke: rgb(45, 45, 45);
+            width: 20px;
+          }
+        }
+
+        .disabledBtnIncreaseQuantity {
+          svg {
+            fill: rgb(232, 232, 232);
+            stroke: rgb(232, 232, 232);
+            width: 20px;
+          }
+          pointer-events: none;
+        }
+
+        .disabledBuyButton,
+        .activeBuyButton {
+          width: 140px;
+          height: 50px;
+          border-radius: 5px;
+          background-color: #008ec8;
+          margin-left: 20px;
+
+          svg {
+            fill: #fff;
+            stroke: #fff;
+            margin-right: 5px;
+          }
+        }
+
+        .disabledBuyButton {
+          opacity: 0.3;
+          pointer-events: none;
+        }
+
+        .inBasket {
+          background-color: #26b663;
+        }
+
+        .favoritesButton {
+          margin-left: auto;
+          background-color: transparent;
+
+          svg {
+            width: 30px;
+            height: 28px;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -78,8 +166,38 @@
     justify-content: center;
 
     .sliderContainer {
-      margin: 30px 0;
+      margin: 10px 0;
       width: 100%;
+    }
+
+    .cardInfo {
+      margin: 5px 0;
+      flex: none;
+      width: 100%;
+      .cardInfoHeader {
+        .quantityBlock {
+          .cardInfoPrice {
+            margin: 5px 0;
+          }
+
+          .disabledBuyButton,
+          .activeBuyButton {
+            margin-left: auto;
+          }
+
+          .favoritesButton {
+            justify-content: flex-start;
+            font-size: 18px;
+            color: #000;
+            margin-top: 20px;
+            width: 100%;
+
+            svg {
+              margin-right: 10px;
+            }
+          }
+        }
+      }
     }
   }
 }
