--- a/src/common/SortList/SortList.scss
+++ b/src/common/SortList/SortList.scss
@@ -18,7 +18,13 @@
 @media screen and (max-width: 1024px) {
   .sortListWrapper {
     .sortListBlock {
-      justify-content: space-between;
+      &.justifyEnd {
+        justify-content: flex-end;
+      }
+
+      &.justifyBetween {
+        justify-content: space-between;
+      }
 
       .filterBtn {
         width: 160px;
@@ -33,7 +39,7 @@
         width: 160px;
         height: 35px;
         margin-top: 0;
-        margin-left: 5px;
+        margin-left: 7px;
         padding: 6px 2px;
       }
     }
