--- a/src/common/CardInfo/components/CardInfoDescription/CardInfoDescription.scss
+++ b/src/common/CardInfo/components/CardInfoDescription/CardInfoDescription.scss
@@ -13,7 +13,60 @@
 
     ul,
     ol {
-      padding-left: 30px; /* Установка отступа слева для элементов списка */
+      padding-left: 30px;
+    }
+  }
+
+  .characteristics {
+    padding: 20px 0;
+    table {
+      width: 100%;
+      tr {
+        &:nth-child(even) {
+          background-color: #fff;
+        }
+        &:nth-child(odd) {
+          background-color: #f7f7f7;
+        }
+
+        th,
+        td {
+          padding: 20px 15px;
+        }
+
+        th {
+          color: #6b6b6b;
+        }
+      }
+    }
+  }
+  .contentCollapsed {
+    max-height: 325px;
+    overflow: hidden;
+    transition: max-height 1s ease-out;
+  }
+
+  .contentExpanded {
+    max-height: 3500px;
+    overflow: hidden;
+    transition: max-height 1s ease-in;
+  }
+
+  .expandBtn {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 5px;
+    width: 180px;
+    height: 30px;
+    color: #008ec8;
+    background-color: transparent;
+    font-weight: 600;
+    font-size: 16px;
+    svg {
+      width: 20px;
+      height: 20px;
+      fill: rgb(0, 0, 0);
+      margin-right: 5px;
     }
   }
 }
