--- a/src/common/CardInfo/components/CardInfoTitle/CardInfoTitle.scss
+++ b/src/common/CardInfo/components/CardInfoTitle/CardInfoTitle.scss
@@ -12,6 +12,75 @@
     }
   }
 
+  .title {
+    display: flex;
+    justify-content: space-between;
+
+    .shareOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 11;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .sharePopup {
+      background-color: #ffffff;
+      width: 400px;
+      height: 140px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 12;
+      border-radius: 5px;
+      padding: 10px 15px;
+      gap: 4px;
+
+      .sharePopupHeader {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 5px 0 10px 0;
+        margin-bottom: 5px;
+        border-bottom: 1px solid #a2a2a2;
+        font-size: 14px;
+
+        .closePopupBtn {
+          width: 25px;
+          height: 25px;
+          background-color: transparent;
+          svg {
+            width: 14px;
+            height: 14px;
+            fill: #008ec8;
+          }
+        }
+      }
+
+      .messengerBtn {
+        width: 45px;
+        height: 45px;
+        background-color: #dcdcdc;
+
+        svg {
+          width: 50px;
+          height: 50px;
+        }
+      }
+    }
+  }
+
   .availableProduct {
     color: green;
   }
@@ -19,10 +88,44 @@
   .unavailableProduct {
     color: #a2a2a2;
   }
+
+  .productCode {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .shareButton {
+      width: 30px;
+      height: auto;
+      margin-right: 10px;
+      background-color: transparent;
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+
+      svg {
+        width: 30px;
+        height: 28px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .cardInfoTitle {
     text-align: left;
+
+    .title {
+      align-items: flex-start;
+
+      .sharePopup {
+        width: 90%;
+      }
+
+      .shareButton {
+        margin-right: 0;
+        margin-top: 10px;
+      }
+    }
   }
 }
