--- a/src/common/FilterProducts/FilterProducts.scss
+++ b/src/common/FilterProducts/FilterProducts.scss
@@ -4,6 +4,19 @@
   width: 100%;
   margin: 0 auto;
 
+  .filterMenuOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 11;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .filters {
     border: 1px solid #eaedf7;
     border-left: none;
