--- a/src/common/MobileMenu/MobileMenu.scss
+++ b/src/common/MobileMenu/MobileMenu.scss
@@ -20,6 +20,19 @@
   background-color: $color;
 }
 
+.mobileMenuOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 11;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .mobileMenu {
   display: flex;
   flex-direction: column;
