--- a/src/common/CategoryMenu/CategoryMenu.scss
+++ b/src/common/CategoryMenu/CategoryMenu.scss
@@ -14,7 +14,7 @@
   background-color: #ffffff;
   border-radius: 5px;
   position: absolute;
-  top: 108%;
+  top: 128%;
   left: 0%;
   height: 0;
   align-items: flex-start;
@@ -34,7 +34,7 @@
       flex-wrap: nowrap;
       justify-content: space-between;
       align-items: center;
-      padding: 10px;
+      padding: 10px 11px;
       border-bottom: 1px dashed #eaedf7;
 
       svg {
