--- a/src/common/CardInfo/components/CardInfoTitle/CardInfoTitle.scss
+++ b/src/common/CardInfo/components/CardInfoTitle/CardInfoTitle.scss
@@ -1,7 +1,6 @@
 .cardInfoTitle {
   p {
     display: inline-block;
-    margin-top: 10px;
     margin-right: 40px;
     color: #a2a2a2;
 
@@ -76,6 +75,7 @@
         svg {
           width: 50px;
           height: 50px;
+          border-radius: 5px;
         }
       }
     }
@@ -90,16 +90,32 @@
   }
 
   .productCode {
+    margin-top: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    .reviews {
+      display: flex;
+      align-items: center;
+
+      .linkComment {
+        cursor: pointer;
+        color: #3e77aa;
+        margin-left: 5px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
 
     .shareButton {
       width: 30px;
       height: auto;
       margin-right: 10px;
       background-color: transparent;
-      flex: 1;
+      margin-left: auto;
       display: flex;
       justify-content: flex-end;
 
@@ -115,16 +131,43 @@
   .cardInfoTitle {
     text-align: left;
 
+    p {
+      margin-right: 10px;
+
+      span {
+        font-size: 16px;
+      }
+    }
+
     .title {
       align-items: flex-start;
 
       .sharePopup {
         width: 90%;
+        height: 120px;
+        .messengerBtn {
+          width: 40px;
+          height: 40px;
+
+          svg {
+            width: 45px;
+            height: 45px;
+          }
+        }
+      }
+    }
+
+    .productCode {
+      gap: 5px;
+
+      .reviews {
+        .rating {
+          font-size: 1.1rem;
+        }
       }
 
       .shareButton {
         margin-right: 0;
-        margin-top: 10px;
       }
     }
   }
